--- a/views/components/_sidebar.pug
+++ b/views/components/_sidebar.pug
@@ -35,7 +35,7 @@
             svg.sidebar__account--btn
                 use(xlink:href="src/img/icon-pack-2.svg#log-in")
             | Login
-        a(href="#").primary__heading
+        a(href="/signup").primary__heading
             svg.sidebar__account--btn
                 use(xlink:href="src/img/icon-pack-2.svg#add-user")
             | Signup
