--- a/sass/components/_account-card.scss
+++ b/sass/components/_account-card.scss
@@ -88,7 +88,7 @@
     }
 }
 
-.account__form {
+.account__form--login {
     padding: 6rem;
     background-color: #b3daf6;
     min-height: 55rem;
@@ -183,5 +183,90 @@
             font-size: 1.5rem;
             text-decoration: none;
         }
+    }
+}
+
+
+.account__form--signup {
+    background-color: $color-light;
+
+    &--bg {
+        width: 100%;
+        padding: 1rem;
+        background-color: $color-primary;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+
+        & img {
+            grid-row: 1/3;
+            grid-column: 1/2;
+            width: 85%;
+        }
+
+        & h2 {
+            grid-row: 1/2;
+            grid-column: 2/3;
+            width: 95%;
+            align-self: end;
+            font-size: 2rem;
+            color: white;
+            font-weight: 600;
+            margin-bottom: 1rem;
+        }
+
+        & p {
+            grid-row: 2/3;
+            grid-column: 2/3;
+            width: 95%;
+            align-self: start;
+            color: $color-dark;
+            font-size: 1.7rem;
+        }
+
+
+    }
+
+    & label {
+        display: block;
+        font-size: 1.9rem;
+        color: $color-dark;
+        margin: 1rem;
+        font-weight: 600;
+
+        @include respond(phone) {
+            width: max-content;
+            margin: 1rem auto;
+        }
+    }
+
+    & input {
+        outline: none;
+        padding: 1rem;
+        padding-left: 2rem;
+        border: none;
+        border-bottom: 2px solid $color-primary;
+        font-size: 1.5rem;
+        display: block;
+        width: 43%;
+        margin: 1rem;
+
+        @include respond(phone) {
+            width: max-content;
+            margin: 1rem auto;
+        }
+    }
+
+    & button {
+        display: block;
+        color: $color-light;
+        font-size: $default-font-size;
+        background-color: rgb(0, 0, 0);
+        border: none;
+        border-radius: 2px;
+        padding: 1rem;
+        width: 80%;
+        margin: 2rem auto;
+        cursor: pointer;
     }
 }
