--- a/views/components/_header.pug
+++ b/views/components/_header.pug
@@ -46,6 +46,7 @@ header.navigation
         a(href="#")
             svg.navigation__link--user-notification.navigation__link--user-icon
                 use(xlink:href="src/img/icon-pack-2.svg#notification")
+                .notification-box
         a(href="#")
             svg.navigation__link--item.navigation__link--user-icon
                 use(xlink:href="src/img/icon-pack-2.svg#menu-3")
