--- a/public/css/style.css
+++ b/public/css/style.css
@@ -104,6 +104,14 @@ footer {
       .navigation__link {
         grid-row: 1/2;
         grid-column: 2/3; } }
+    .navigation__link .notification-box {
+      height: 1rem;
+      width: 1rem;
+      position: relative;
+      top: -3rem;
+      right: -2.8rem;
+      background-color: #F44336;
+      border-radius: 50%; }
     .navigation__link--btn {
       text-decoration: none;
       font-size: 1.6rem;
@@ -116,6 +124,8 @@ footer {
       .navigation__link--btn-active, .navigation__link--btn:hover {
         background-color: #fff;
         color: #444343; }
+    .navigation__link--user-notification {
+      position: relative; }
     .navigation__link--user-profile {
       margin: 0 1.5rem; }
     .navigation__link--user-icon {
