--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -86,6 +86,16 @@
             grid-column: 2/3;
         }
 
+        .notification-box {
+            height: 1rem;
+            width: 1rem;
+            position: relative;
+            top: -3rem;
+            right: -2.8rem;
+            background-color: #F44336;
+            border-radius: 50%;
+        }
+
         &--btn {
             text-decoration: none;
             font-size: 1.6rem;
@@ -107,6 +117,11 @@
 
 
         &--user {
+
+            &-notification {
+                position: relative;
+
+            }
 
             &-profile {
                 margin: 0 1.5rem;
