--- a/public/css/style.css
+++ b/public/css/style.css
@@ -108,8 +108,8 @@ footer {
       height: 1rem;
       width: 1rem;
       position: relative;
-      top: -3rem;
-      right: -2.8rem;
+      top: 0rem;
+      right: 1.8rem;
       background-color: #F44336;
       border-radius: 50%; }
     .navigation__link--btn {
@@ -125,7 +125,7 @@ footer {
         background-color: #fff;
         color: #444343; }
     .navigation__link--user-notification {
-      position: relative; }
+      display: flex; }
     .navigation__link--user-profile {
       margin: 0 1.5rem; }
     .navigation__link--user-icon {
