--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -90,8 +90,8 @@
             height: 1rem;
             width: 1rem;
             position: relative;
-            top: -3rem;
-            right: -2.8rem;
+            top: 0rem;
+            right: 1.8rem;
             background-color: #F44336;
             border-radius: 50%;
         }
@@ -119,8 +119,8 @@
         &--user {
 
             &-notification {
-                position: relative;
 
+                display: flex;
             }
 
             &-profile {
