--- a/public/css/style.css
+++ b/public/css/style.css
@@ -105,13 +105,19 @@ footer {
         grid-row: 1/2;
         grid-column: 2/3; } }
     .navigation__link .notification-box {
-      height: 1rem;
-      width: 1rem;
+      height: 2rem;
+      width: 2rem;
       position: relative;
-      top: 0rem;
-      right: 1.8rem;
+      top: -1.2rem;
+      right: 2rem;
       background-color: #F44336;
-      border-radius: 50%; }
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center; }
+      .navigation__link .notification-box span {
+        font-size: 1.4rem;
+        color: white; }
     .navigation__link--btn {
       text-decoration: none;
       font-size: 1.6rem;
@@ -234,7 +240,7 @@ footer {
         width: 3rem;
         height: 3rem; } }
   .landing--nxt-btn {
-    z-index: 19;
+    z-index: 9;
     position: absolute;
     top: 42%;
     right: 3rem;
