--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -87,13 +87,24 @@
         }
 
         .notification-box {
-            height: 1rem;
-            width: 1rem;
+            height: 2rem;
+            width: 2rem;
             position: relative;
-            top: 0rem;
-            right: 1.8rem;
+            top: -1.2rem;
+            right: 2rem;
             background-color: #F44336;
             border-radius: 50%;
+
+
+            display: flex;
+            justify-content: center;
+            align-items: center;
+
+
+            & span {
+                font-size: 1.4rem;
+                color: white;
+            }
         }
 
         &--btn {
