--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -81,6 +81,10 @@
         display: flex;
         align-items: center;
 
+        & a {
+            text-decoration: none;
+        }
+
         @include respond(tab-land) {
             grid-row: 1/2;
             grid-column: 2/3;
