--- a/views/me-user.pug
+++ b/views/me-user.pug
@@ -12,7 +12,7 @@ block content
             .manage__profile--user
                 .manage__profile--user-card
                     img.manage__profile--user-card-image(src="src/img/doctor-dp.jpg", alt="user profile")
-                    h1.manage__profile--user-card-name Anjali singh
-                    p.manage__profile--user-card-id User-ID 32378937df3964hd
-                    span.manage__profile--user-card-age 21 yr
-                    span.manage__profile--user-card-dob 14th nov 1996
+                    h1.manage__profile--user-card-name.primary__heading Mrs. Anjali singh
+                    p.manage__profile--user-card-id.primary__heading ID 32378937df3964hd
+                    span.manage__profile--user-card-age.primary__paragraph 21 yr
+                    span.manage__profile--user-card-dob.primary__paragraph 14th nov 1996
