--- a/sass/pages/_account.scss
+++ b/sass/pages/_account.scss
@@ -26,53 +26,74 @@
             max-width: 50rem;
             padding: 2rem;
             display: grid;
-            grid-template-rows: 1fr 1fr;
+            grid-template-rows: 1fr 1fr 1fr;
             grid-template-columns: min-content max-content max-content;
             border-radius: 3px;
             margin: 1rem 1rem;
             background-color: #e5e5e5;
 
+            @include respond(phone) {
+                padding: 1rem;
+            }
+
             &-image {
                 height: 9rem;
                 width: 9rem;
                 border-radius: 50%;
-                grid-row: 1/3;
+                grid-row: 1/4;
                 grid-column: 1/2;
                 margin-right: 2rem;
+
+                @include respond(phone) {
+                    margin-right: 1rem;
+                }
             }
 
             &-name {
-                font-size: 1.8rem;
+                // font-size: 1.8rem;
                 grid-row: 1/2;
                 grid-column: 2/3;
                 align-self: center;
                 margin: 0 1rem;
+
+                @include respond(phone) {}
             }
-
-            &-age {
-                align-self: center;
-
-                font-size: 1.6rem;
-                grid-row: 2/3;
-                margin: 0 1rem;
-                grid-column: 2/3;
-            }
-
 
             &-id {
                 align-self: center;
                 margin: 0 1rem;
-                font-size: 1.4rem;
-                grid-row: 1/2;
-                grid-column: 3/4;
+                // font-size: 1.4rem;
+                grid-row: 2/3;
+                grid-column: 2/4;
                 font-weight: 600;
+
+                @include respond(phone) {}
             }
+
+            &-age {
+                align-self: center;
+                // font-size: 1.6rem;
+                grid-row: 3/4;
+                margin: 0 1rem;
+                grid-column: 2/3;
+
+                @include respond(phone) {
+                    grid-area: 3/2/4/4;
+                }
+            }
+
+
 
             &-dob {
                 align-self: center;
-                font-size: 1.6rem;
-                grid-row: 2/3;
+                // font-size: 1.6rem;
+                grid-row: 3/4;
                 grid-column: 3/4;
+
+                @include respond(phone) {
+                    grid-area: 3/2/4/4;
+                    justify-self: end;
+                }
             }
         }
     }
