--- a/sass/abstracts/_variable.scss
+++ b/sass/abstracts/_variable.scss
@@ -8,8 +8,16 @@ $color-light: #fff;
 $color-gray: #444343;
 $color-gray-light: #a7a6a6;
 $color-dark: #2a2a2a;
+$color-black-visible:rgba(0, 0, 0, 0.8);
+
 
 $color-green-light:rgb(11, 141, 11);
+
+$color-red:#f55044;
+
+$color-error:#fc3838;
+$color-warning:#ffc107;
+$color-success:#92e433;
 
 $padding-sm:1rem;
 $padding-m: 1.5rem;
