--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,6 +12,7 @@
 @import "components/features";
 @import "components/review-card";
 @import "components/account-card";
+@import "components/page-header";
 
 @import "typography/typography";
 @import "base/base.scss";
