--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,6 +13,7 @@
 @import "components/review-card";
 @import "components/account-card";
 @import "components/page-header";
+@import "components/notification";
 
 @import "typography/typography";
 @import "base/base.scss";
