--- a/views/components/_header.pug
+++ b/views/components/_header.pug
@@ -43,7 +43,7 @@ header.navigation
         a(href="/me")
             svg.navigation__link--user-profile.navigation__link--user-icon
                 use(xlink:href="src/img/icon-pack-2.svg#user")
-        a(href="#", style="display: flex;")
+        a(href="/notification", style="display: flex;")
             svg.navigation__link--user-notification.navigation__link--user-icon
                 use(xlink:href="src/img/icon-pack-2.svg#notification")
                 .notification-box 
