--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -1,4 +1,5 @@
 .page__header {
+    height: 8rem;
     z-index: 10;
     position: sticky;
     top: 0;
@@ -16,8 +17,8 @@
         cursor: pointer;
 
         & svg {
-            width: 3rem;
-            height: 3rem;
+            width: 4.5rem;
+            height: 4.5rem;
             margin: 0 1rem;
             fill: $color-light;
             transform: rotate(180deg);
@@ -32,5 +33,6 @@
         cursor: pointer;
         grid-column: 2/3;
         justify-self: end;
+        align-self: center;
     }
 }
