--- a/views/components/_sidebar.pug
+++ b/views/components/_sidebar.pug
@@ -25,7 +25,7 @@
                 use(xlink:href="src/img/icon-pack-2.svg#user") 
             | Profile
 
-        a(href="#").sidebar__list--item.primary__heading
+        a(href="/about").sidebar__list--item.primary__heading
             svg.sidebar__list--item-icon 
                 use(xlink:href="src/img/icon-pack-2.svg#coronavirus") 
             | Corona virus
