--- a/views/home.pug
+++ b/views/home.pug
@@ -1,22 +1,27 @@
-extends base
+extend base
 
 block content
     .main__container
-        //- -----Landing section-----
-        include components/_landing
-
-        h1.section__heading--main Features
-        p.section__heading--sub Lorem, ipsum dolor.
-        include components/_features
-
-        h1.section__heading--main Get our app on Playstore
-        p.section__heading--sub Lorem ipsum dolor sit amet Lorem, ipsum..
-        include components/app_sponser
-
-
-        h1.section__heading--main What people say about us ?
-        p.section__heading--sub Lorem ipsum dolor sit amet.
-        include components/_review-card
-
-        
-        
+        .app__home
+            .app__home__quick-branch
+                a(href="#")
+                    img(src="src/img/ayurwed.jpg", alt="Ayurwed department")
+                    p.primary__paragraph Ayurweda
+                a(href="#")
+                    img(src="src/img/dentist.jpg", alt="Ayurwed department")
+                    p.primary__paragraph Denstist
+                a(href="#")
+                    img(src="src/img/doctor-dp.jpg", alt="Ayurwed department")
+                    p.primary__paragraph Physician
+                a(href="#")
+                    img(src="src/img/stretoscope.jpg", alt="Ayurwed department")
+                    p.primary__paragraph Neurologist
+                a(href="#")
+                    img(src="src/img/ayurwed.jpg", alt="Ayurwed department")
+                    p.primary__paragraph Ayurweda
+                a(href="#")
+                    img(src="src/img/ayurwed.jpg", alt="Ayurwed department")
+                    p.primary__paragraph Ayurweda
+                a(href="#")
+                    img(src="src/img/ayurwed.jpg", alt="Ayurwed department")
+                    p.primary__paragraph Ayurweda
