--- a/views/tab-base.pug
+++ b/views/tab-base.pug
@@ -5,9 +5,7 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         link(rel="shortcut icon", href="src/img/logo-primary.jpg", type="image/x-icon")
         link(rel="stylesheet", href="css/style.css")
-        script(defer src="src/js/index.js")
-        script(defer src="src/js/alert.js")
-        script(defer src="src/js/function.js")
+        script(defer src="src/js/bundle.js")
         -var userPageId = userID;
         title= userPageId
 
