--- a/public/css/style.css
+++ b/public/css/style.css
@@ -323,7 +323,7 @@ footer {
   .slider__btn {
     position: absolute;
     top: 50%;
-    z-index: 10;
+    z-index: 0;
     border: none;
     background: rgba(255, 255, 255, 0.7);
     font-family: inherit;
@@ -886,8 +886,8 @@ footer {
     justify-content: flex-start;
     cursor: pointer; }
     .page__header--icon-box svg {
-      width: 4.5rem;
-      height: 4.5rem;
+      width: 3.5rem;
+      height: 3.5rem;
       margin: 0 1rem;
       fill: #fff;
       transform: rotate(180deg); }
@@ -1025,6 +1025,46 @@ body {
     .main__container {
       padding: 0; } }
 
+.app__home {
+  width: 65%;
+  margin: 2rem auto; }
+  @media only screen and (max-width: 75em) {
+    .app__home {
+      width: auto; } }
+  .app__home__quick-branch {
+    margin: 2rem auto;
+    display: flex;
+    justify-content: center; }
+    @media only screen and (max-width: 56.25em) {
+      .app__home__quick-branch {
+        padding: 1rem;
+        overflow-x: scroll;
+        flex-wrap: nowrap;
+        flex-shrink: 0;
+        flex-grow: 0;
+        justify-content: flex-start; } }
+    .app__home__quick-branch a {
+      padding: 0 2rem;
+      margin-right: .5rem;
+      text-decoration: none;
+      display: flex;
+      flex-direction: column;
+      justify-content: center; }
+      @media only screen and (max-width: 56.25em) {
+        .app__home__quick-branch a {
+          align-items: center; } }
+      .app__home__quick-branch a p {
+        color: #108eea;
+        margin-top: .5rem; }
+      .app__home__quick-branch a img {
+        width: 9rem;
+        height: 9rem;
+        border-radius: 50%; }
+        @media only screen and (max-width: 56.25em) {
+          .app__home__quick-branch a img {
+            width: 5rem;
+            height: 5rem; } }
+
 .manage__profile--nav {
   padding: 1rem;
   display: flex;
@@ -1047,13 +1087,17 @@ body {
   padding: 2rem;
   display: grid;
   grid-template-rows: 1fr 1fr 1fr;
-  grid-template-columns: min-content max-content max-content;
+  grid-template-columns: min-content 1fr 1fr;
   border-radius: 3px;
   margin: 1rem 1rem;
   background-color: #e5e5e5; }
   @media only screen and (max-width: 37.5em) {
     .manage__profile--user-card {
       padding: 1rem; } }
+  .manage__profile--user-card--field {
+    font-size: 1.8rem;
+    font-weight: 700;
+    margin-right: 1rem; }
   .manage__profile--user-card-image {
     height: 9rem;
     width: 9rem;
@@ -1066,7 +1110,7 @@ body {
         margin-right: 1rem; } }
   .manage__profile--user-card-name {
     grid-row: 1/2;
-    grid-column: 2/3;
+    grid-column: 2/4;
     align-self: center;
     margin: 0 1rem; }
   .manage__profile--user-card-id {
@@ -1082,7 +1126,8 @@ body {
     grid-column: 2/3; }
     @media only screen and (max-width: 37.5em) {
       .manage__profile--user-card-age {
-        grid-area: 3/2/4/4; } }
+        grid-area: 3/2/4/4;
+        justify-self: star; } }
   .manage__profile--user-card-dob {
     align-self: center;
     grid-row: 3/4;
