--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,7 +12,7 @@
 @import "components/features";
 @import "components/review-card";
 @import "components/account-card";
-@import "components/page-header";
+@import "components/tab-header";
 @import "components/notification";
 
 @import "typography/typography";
