--- a/sass/pages/_account.scss
+++ b/sass/pages/_account.scss
@@ -27,13 +27,19 @@
             padding: 2rem;
             display: grid;
             grid-template-rows: 1fr 1fr 1fr;
-            grid-template-columns: min-content max-content max-content;
+            grid-template-columns: min-content 1fr 1fr;
             border-radius: 3px;
             margin: 1rem 1rem;
             background-color: #e5e5e5;
 
             @include respond(phone) {
                 padding: 1rem;
+            }
+
+            &--field {
+                font-size: 1.8rem;
+                font-weight: 700;
+                margin-right: 1rem;
             }
 
             &-image {
@@ -52,7 +58,7 @@
             &-name {
                 // font-size: 1.8rem;
                 grid-row: 1/2;
-                grid-column: 2/3;
+                grid-column: 2/4;
                 align-self: center;
                 margin: 0 1rem;
 
@@ -79,6 +85,7 @@
 
                 @include respond(phone) {
                     grid-area: 3/2/4/4;
+                    justify-self: star;
                 }
             }
 
