--- a/views/base.pug
+++ b/views/base.pug
@@ -5,10 +5,8 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         link(rel="shortcut icon", href="src/img/logo-primary.jpg", type="image/x-icon")
         link(rel="stylesheet", href="css/style.css")
-        script(defer src="src/js/index.js")
-        script(defer src="src/js/landing_slider.js")
-        script(defer src="src/js/alert.js")
-
+        script(defer src="src/js/bundle.js")
+        
         title Meso| All you need is here.
     body
 
