--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -32,6 +32,7 @@
             justify-content: center;
 
             @include respond(tab-port) {
+                padding: 0 1rem;
                 align-items: center;
             }
 
