--- a/views/home.pug
+++ b/views/home.pug
@@ -25,3 +25,60 @@ block content
                 a(href="#")
                     img(src="src/img/ayurwed.jpg", alt="Ayurwed department")
                     p.primary__paragraph Ayurweda
+                a(href="#")
+                    img(src="src/img/ayurwed.jpg", alt="Ayurwed department")
+                    p.primary__paragraph Ayurweda
+                a(href="#")
+                    img(src="src/img/dentist.jpg", alt="Ayurwed department")
+                    p.primary__paragraph Denstist
+                a(href="#")
+                    img(src="src/img/doctor-dp.jpg", alt="Ayurwed department")
+                    p.primary__paragraph Physician
+                a(href="#")
+                    img(src="src/img/stretoscope.jpg", alt="Ayurwed department")
+                    p.primary__paragraph Neurologist
+                a(href="#")
+                    img(src="src/img/ayurwed.jpg", alt="Ayurwed department")
+                    p.primary__paragraph Ayurweda
+                a(href="#")
+                    img(src="src/img/ayurwed.jpg", alt="Ayurwed department")
+                    p.primary__paragraph Ayurweda
+                a(href="#")
+                    img(src="src/img/ayurwed.jpg", alt="Ayurwed department")
+                    p.primary__paragraph Ayurweda
+
+
+            h1.section__heading Top Doctors Near you
+            .app__home__quick-branch
+                a(href="#")
+                    img(src="src/img/doctor1.jpg", alt="Ayurwed department")
+                    p.primary__paragraph Dr Soni yadav
+                a(href="#")
+                    img(src="src/img/doctor2.jpg", alt="Ayurwed department")
+                    p.primary__paragraph Dr Vivek singh
+                a(href="#")
+                    img(src="src/img/doctor3.jpg", alt="Ayurwed department")
+                    p.primary__paragraph Dr Pankaj gupta
+                a(href="#")
+                    img(src="src/img/doctor2.jpg", alt="Ayurwed department")
+                    p.primary__paragraph Dr Shaurab maurya
+                a(href="#")
+                    img(src="src/img/doctor1.jpg", alt="Ayurwed department")
+                    p.primary__paragraph Dr Sunita yadav
+
+
+            h1.section__heading Top Hospitals Near you
+            .app__home__quick-branch
+                a(href="#")
+                    img(src="src/img/carsoul1.jpg", alt="Ayurwed department")
+                    p.primary__paragraph Maruti Nandan
+                a(href="#")
+                    img(src="src/img/carsoul2.jpg", alt="Ayurwed department")
+                    p.primary__paragraph Gokila Ben
+                a(href="#")
+                    img(src="src/img/carsoul3.jpg", alt="Ayurwed department")
+                    p.primary__paragraph Apollo
+                a(href="#")
+                    img(src="src/img/carsoul4.jpg", alt="Ayurwed department")
+                    p.primary__paragraph Lala lajpat Ray
+                
