--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,5 +1,5 @@
 .app__home {
-    width: max-content;
+    width: 61%;
     margin: 2rem auto;
 
     @include respond(tab-land) {
@@ -18,11 +18,7 @@
         flex-grow: 0;
 
         @include respond(tab-port) {
-            padding: 1rem;
-            // overflow-x: scroll;
-            // flex-wrap: nowrap;
-            // flex-shrink: 0;
-            // flex-grow: 0;
+            padding: 0rem;
         }
 
         & a {
@@ -36,6 +32,10 @@
 
             @include respond(tab-port) {
                 padding: 0 1rem;
+
+                &:first-child {
+                    padding: 0;
+                }
             }
 
             & p {
