--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,6 +14,7 @@
 @import "components/account-card";
 @import "components/tab-header";
 @import "components/notification";
+@import "components/user-profile-card";
 
 @import "typography/typography";
 @import "base/base.scss";
