--- a/views/home.pug
+++ b/views/home.pug
@@ -5,6 +5,8 @@ block content
         .app__home
             .app__home__quick-branch
                 a(href="#")
+                    svg.app__home__quick-branch--placeholder
+                        use(xlink:href="src/img/icon-pack-2.svg#home")
                     img(src="src/img/ayurwed.jpg", alt="Ayurwed department")
                     p.primary__paragraph Ayurweda
                 a(href="#")
@@ -50,19 +52,19 @@ block content
 
             h1.section__heading Top Doctors Near you
             .app__home__quick-branch
-                a(href="#")
+                a(href="/doctor/Dr soni yadav")
                     img(src="src/img/doctor1.jpg", alt="Ayurwed department")
                     p.primary__paragraph Dr Soni yadav
-                a(href="#")
+                a(href="/doctor/Dr Vivek singh")
                     img(src="src/img/doctor2.jpg", alt="Ayurwed department")
                     p.primary__paragraph Dr Vivek singh
-                a(href="#")
+                a(href="/doctor/Dr Pankaj gupta")
                     img(src="src/img/doctor3.jpg", alt="Ayurwed department")
                     p.primary__paragraph Dr Pankaj gupta
-                a(href="#")
+                a(href="/doctor/Dr Shaurabh maurya")
                     img(src="src/img/doctor2.jpg", alt="Ayurwed department")
                     p.primary__paragraph Dr Shaurab maurya
-                a(href="#")
+                a(href="/doctor/Dr Sunita yadav")
                     img(src="src/img/doctor1.jpg", alt="Ayurwed department")
                     p.primary__paragraph Dr Sunita yadav
 
