--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -17,11 +17,24 @@
         flex-shrink: 0;
         flex-grow: 0;
 
+        &--placeholder {
+            width: 4rem;
+            height: 4rem;
+            position: absolute;
+            top: 10px;
+
+            fill: red;
+            margin: auto;
+            margin-right: auto;
+            margin-left: auto;
+        }
+
         @include respond(tab-port) {
             padding: 0rem;
         }
 
         & a {
+            position: relative;
             padding: 0 2rem;
             margin-right: .5rem;
             text-decoration: none;
@@ -46,6 +59,7 @@
             }
 
             & img {
+                z-index: 3;
                 width: 9rem;
                 height: 9rem;
                 border-radius: 50%;
