--- a/views/home.pug
+++ b/views/home.pug
@@ -54,19 +54,19 @@ block content
             .app__home__quick-branch
                 a(href="/doctor/Dr soni yadav")
                     img(src="src/img/doctor1.jpg", alt="Ayurwed department")
-                    p.primary__paragraph Dr Soni yadav
+                    p.primary__paragraph.app__home__quick-branch--name-box Dr Soni yadav
                 a(href="/doctor/Dr Vivek singh")
                     img(src="src/img/doctor2.jpg", alt="Ayurwed department")
-                    p.primary__paragraph Dr Vivek singh
+                    p.primary__paragraph.app__home__quick-branch--name-box  Dr Vivek singh
                 a(href="/doctor/Dr Pankaj gupta")
                     img(src="src/img/doctor3.jpg", alt="Ayurwed department")
-                    p.primary__paragraph Dr Pankaj gupta
+                    p.primary__paragraph.app__home__quick-branch--name-box  Dr Pankaj gupta
                 a(href="/doctor/Dr Shaurabh maurya")
                     img(src="src/img/doctor2.jpg", alt="Ayurwed department")
-                    p.primary__paragraph Dr Shaurab maurya
+                    p.primary__paragraph.app__home__quick-branch--name-box  Dr Shaurab maurya
                 a(href="/doctor/Dr Sunita yadav")
                     img(src="src/img/doctor1.jpg", alt="Ayurwed department")
-                    p.primary__paragraph Dr Sunita yadav
+                    p.primary__paragraph.app__home__quick-branch--name-box  Dr Sunita yadav
 
 
             h1.section__heading Top Hospitals Near you
